--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
                 <li>Shape of You - Ed Sheeran</li>
                 <li>Teach me How to Love - Shawn Mendes</li>
             </ul>
+            <p><strong>3 jobis:</strong></p>
+            <ul>
+                <li>Aprender de Tecnologia</li>
+                <li>Jugar</li>
+                <li>Pasar tiempo con mi novia</li>
+            </ul>
         </aside>
     </main>
     <footer>
